plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.8'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'jacoco'
}

group = 'com.seine'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:3.0.8'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.0.8'
    implementation 'org.springframework.boot:spring-boot-starter-graphql:3.0.4'
    implementation 'com.graphql-java:graphql-java:20.0'
    testImplementation 'org.springframework.graphql:spring-graphql-test:1.2.0'
    compileOnly 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.8'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.0.0'
    implementation 'ch.qos.logback:logback-classic:1.4.8'
    implementation 'org.slf4j:slf4j-api:2.0.7'
    testImplementation 'org.springframework.graphql:spring-graphql-test:1.2.2'

    testImplementation "org.testcontainers:testcontainers:1.18.3"
    testImplementation "org.testcontainers:junit-jupiter:1.18.3"
    testImplementation "org.testcontainers:mongodb:1.18.3"
}

tasks.named('test') {
    useJUnitPlatform()
}

test {
    systemProperty "spring.profiles.active", "test"
    finalizedBy jacocoTestReport // report is always generated after tests run
}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
}

